src/test/ui/span/issue-29106.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-29106.rs:26:27
   |
26 |         y = Arc::new(Foo(&x));
   |                           ^ borrowed value does not live long enough
27 |     }
   |     - `x` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `x` does not live long enough
  --> $DIR/issue-29106.rs:33:26
   |
33 |         y = Rc::new(Foo(&x));
   |                          ^ borrowed value does not live long enough
34 |     }
   |     - `x` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

